c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/compound_mod.c
// Can't apply %= to a double
int main(void) {
    double d = 5.0;
    d %= 2;
    return (int) d;
}